# underground-railroad

./: .env.example  .gitignore  .metadata.cargokit.json  ANDROID_VEILID_SETUP.md  BUILD.md  BUILD_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_STATE.md  Cargo.toml  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_STATUS.txt  FINAL_STATUS.md  INDEX.md  LICENSE  MESSAGING_COMPLETE.md  MESSAGING_IMPLEMENTATION.md  NEXT_STEPS.md  PROGRESS.md  PROJECT_COMPLETE.md  PROJECT_COMPLETE.old.md  PROJECT_FILES.txt  PROJECT_MANIFEST.txt  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  READY_TO_RUN.md  RESUME_HERE.md  ROADMAP.md  SECURITY.md  SESSION_PROGRESS.md  START_HERE.md  STATUS.md  SUMMARY.md  TESTING_GUIDE.md  TODO.md  USAGE.md  VEILID_MESSAGING_STATUS.md  (+10 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
android/app/: build.gradle.kts
android/app/src/main/kotlin/com/example/underground_railroad/: MainActivity.kt
core/: Cargo.toml
core/src/: error.rs  lib.rs  types.rs
core/src/assistance/: emergency.rs  intelligence.rs  mod.rs  safe_house.rs  transportation.rs
core/src/crypto/: keys.rs  mod.rs
core/src/identity/: keypair.rs  mod.rs  persona.rs  qr.rs
core/src/messaging/: encryption.rs  mod.rs  protocol.rs  routing.rs
core/src/storage/: database.rs  migrations.rs  mod.rs  schema.rs
core/src/storage/repository/: contacts.rs  emergencies.rs  identity.rs  intelligence.rs  messages.rs  mod.rs  safe_houses.rs
core/src/trust/: contact.rs  graph.rs  mod.rs  verification.rs
core/src/veilid_client/: client.rs  config.rs  dht.rs  messaging.rs  mod.rs  routes.rs
core/tests/: README.md  integration_test.rs
ffi/: Cargo.toml  build.rs
ffi/src/: api.rs  frb_generated.rs  lib.rs
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/constants/: app_constants.dart
lib/core/crypto/: crypto_service.dart  message_crypto_service.dart
lib/core/routing/: app_router.dart
lib/core/security/: duress_manager.dart  security_manager.dart
lib/core/services/: message_listener_service.dart  notification_service.dart
lib/core/storage/: database_service.dart  secure_storage_service.dart
lib/core/utils/: platform_directories.dart
lib/core/veilid/: veilid_service.dart
lib/features/auth/presentation/: pin_entry_screen.dart  pin_setup_screen.dart  splash_screen.dart
lib/features/auth/providers/: auth_providers.dart
lib/features/contacts/data/: contact_repository.dart
lib/features/contacts/presentation/: contacts_screen.dart
lib/features/contacts/providers/: contact_providers.dart
lib/features/messaging/data/: message_repository.dart
lib/features/messaging/presentation/: chat_screen.dart
lib/features/messaging/providers/: message_refresh_provider.dart  messaging_providers.dart
lib/shared/models/: contact.dart  message.dart
lib/shared/providers/: app_providers.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/: build_rust.sh
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: cargokit_build.sh
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/ios/Runner/: AppDelegate.swift  Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/ffi/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
mobile/lib/screens/: chat_screen.dart  contacts_screen.dart  emergency_screen.dart  home_screen.dart  intel_screen.dart  messages_screen.dart  onboarding_screen.dart  qr_scanner_screen.dart  safe_house_screen.dart
mobile/lib/services/: railroad_service.dart  veilid_messaging_service.dart  veilid_service.dart
mobile/lib/state/: app_state.dart
mobile/macos/: copy_ffi_lib.sh
mobile/macos/Flutter/: GeneratedPluginRegistrant.swift  copy_ffi.sh  copy_rust_lib.sh
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/tool/: build_rust.dart
rust/: Cargo.toml  build.rs
rust/src/: api.rs  crypto.rs  error.rs  lib.rs  veilid_manager.rs
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+1 files in other folders)
