[workspace]
resolver = "2"
members = [
    "core",
    "ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Underground Railroad Contributors"]
license = "GPL-3.0-or-later"
repository = "https://github.com/underground-railroad/underground-railroad"

[workspace.dependencies]
# Veilid for anonymous networking
veilid-core = "0.4"

# Cryptography
argon2 = { version = "0.5", features = ["std"] }
chacha20poly1305 = "0.10"
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
secrecy = "0.8"

# Post-quantum cryptography (future-proofing)
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# Database - version compatible with veilid-core
rusqlite = { version = "0.29", features = ["bundled-sqlcipher-vendored-openssl"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
chrono = "0.4"
uuid = { version = "1.7", features = ["v4", "serde"] }
hex = "0.4"
base64 = "0.21"

# i18n
fluent = "0.16"
fluent-bundle = "0.15"
sys-locale = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Remove symbols
panic = "abort"     # Smaller binary

[profile.dev]
opt-level = 0
debug = true
