[package]
name = "underground-railroad-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
veilid-core = { workspace = true }
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
pqcrypto-kyber = { workspace = true }
pqcrypto-dilithium = { workspace = true }
pqcrypto-traits = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.10"

[lib]
name = "underground_railroad_core"
path = "src/lib.rs"
