[package]
name = "underground_railroad"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Veilid core
veilid-core = "0.4.8"

# Flutter bridge
flutter_rust_bridge = "=2.11.1"

# Async runtime
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
argon2 = "0.5"
chacha20poly1305 = "0.10"
blake3 = "1.5"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
lazy_static = "1.5"
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

[profile.dev]
opt-level = 0
